--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>Lightning Bugs NFT - ERC-721 bug collecting on the blockchain</title>
+    <meta rel="description" content="Lightning Bugs are the first ERC-721 to bring real-world bug collecting to the blockchain. Collect, trade, and share your favorite NFT insects.">
     <link rel="stylesheet" href="https://unpkg.com/style.css">
+    <link rel="shortcut icon" href="./favicon.png">
   </head>
   <body>
     <section
